--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,21 +30,32 @@ body {
   width: inherit;
 }
 
-.maintext {
+#maintext {
   padding: 1vh 2vh;
   color: whitesmoke;
   height: min-content;
   overflow: hidden;
   backdrop-filter: grayscale;
   font-size: calc(1rem + 2vh);
+  animation: 10s ease-out 0s 1 normal forwards running fadeintext;
+}
+
+.textbottomleft,
+.textbottomright,
+.textbottomcenter,
+.texttopleft,
+.texttopright,
+.texttopcenter,
+.textmiddleleft,
+.textmiddleright,
+.textmiddlecenter {
+  position: absolute;
 }
 
 .textbottomleft {
-  position: absolute;
   top: 55vh;
   left: 5vw;
   max-width: 70vw;
-  animation: 10s ease-out 0s 1 normal forwards running fadeintext;
 }
 
 .textbottomright {
@@ -52,7 +63,6 @@ body {
   top: 55vh;
   right: 5vw;
   max-width: 70vw;
-  animation: 10s ease-out 0s 1 normal forwards running fadeintext;
 }
 
 .textbottomcenter {
@@ -60,7 +70,6 @@ body {
   top: 55vh;
   left: 30vw;
   max-width: 70vw;
-  animation: 10s ease-out 0s 1 normal forwards running fadeintext;
 }
 
 .texttopcenter {
@@ -68,7 +77,6 @@ body {
   top: 5vh;
   left: 30vw;
   max-width: 70vw;
-  animation: 10s ease-out 0s 1 normal forwards running fadeintext;
 }
 
 /* @keyframes duration | easing-function | delay |
