--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,8 +87,13 @@ body {
 .textmiddleright,
 .textmiddlecenter {
   position: absolute;
+  padding: 1vh 2vh;
   color: whitesmoke;
+  height: min-content;
+  overflow: hidden;
+  backdrop-filter: grayscale;
   font-size: calc(1rem + 2vh);
+  animation: 10s ease-out 0s 1 normal forwards running fadeintext;
 }
 
 .textbottomleft {
