--- a/client/src/App.css
+++ b/client/src/App.css
@@ -92,49 +92,50 @@ body {
   overflow: hidden;
   backdrop-filter: grayscale;
   font-size: calc(1rem + 2vh);
+  color: rgba(255, 255, 255, 0);
 }
 
-#mainText0 {
+#maintext0 {
   animation: 5s ease-out 0s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText1 {
+#maintext1 {
   animation: 5s ease-out 4s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText2 {
+#maintext2 {
   animation: 5s ease-out 8s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText3 {
+#maintext3 {
   animation: 5s ease-out 12s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText4 {
+#maintext4 {
   animation: 5s ease-out 16s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText5 {
+#maintext5 {
   animation: 5s ease-out 20s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText6 {
+#maintext6 {
   animation: 5s ease-out 24s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText7 {
+#maintext7 {
   animation: 5s ease-out 28s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
 
-#mainText8 {
+#maintext8 {
   animation: 5s ease-out 32s 1 normal forwards running fadeintext;
   color: rgba(255, 255, 255, 0);
 }
