--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie:regular,bold,italic&subset=latin,latin-ext");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Reenie Beanie", sans-serif;
 }
 
 body {
@@ -23,7 +26,7 @@ body {
   90% {
     color: rgb(255, 255, 255);
     filter: blur(0px);
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.828);
+    text-shadow: 0px 1px 1px rgba(0, 0, 0);
   }
 }
 
@@ -32,18 +35,20 @@ body {
   10% {
     color: rgba(255, 255, 255, 0);
     filter: blur(4px);
+    text-shadow: none;
   }
   20%,
   90% {
     color: rgb(255, 255, 255);
     filter: blur(0px);
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.828);
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.928);
     display: block;
   }
   100% {
     color: rgba(255, 255, 255, 0);
     filter: blur(4px);
     display: none;
+    text-shadow: none;
   }
 }
 
@@ -90,7 +95,6 @@ body {
   padding: 1vh 2vh;
   height: min-content;
   overflow: hidden;
-  backdrop-filter: grayscale;
   font-size: calc(1rem + 2vh);
   color: rgba(255, 255, 255, 0);
 }
@@ -154,7 +158,7 @@ body {
   height: min-content;
   overflow: hidden;
   backdrop-filter: grayscale;
-  font-size: calc(1rem + 2vh);
+  font-size: calc(2rem + 2vh);
 }
 
 .textbottomleft {
