--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,6 +99,7 @@ body {
   font-size: calc(1rem + 2vh);
   color: rgba(255, 255, 255, 0);
   z-index: 3000;
+  text-transform: lowercase;
 }
 
 #maintext0 {
