--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,9 @@
   margin: 0;
   padding: 0;
   font-family: "Reenie Beanie", sans-serif;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 body {
