--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  text-transform: lowercase;
 }
 
 body {
